assets/sass/fractal6.scss
/* ... */
// Card

.card {
    border-radius: 6px;
    //border:1px solid var(--border-color-light) !important;
}

// Breadcumb
.breadcrumb {
    a:hover {
        color: var(--link-hover);
    }
}

// @debug: hover is not computed from variable defined here...
.is-primary {
    &:not(.hero):hover {
        background-color: darken($primary, 5) !important;
    }
}

.is-center {
    // Dropdown menu centering
    left: 50% !important;
    right: auto !important;
    -webkit-transform: translate(-50%, 0) !important;
    transform: translate(-50%, 0) !important;
}

// Notification
.notification {
    a:not(.stealth-link):not(.button):not(.button-light) {
        color: var(--link) !important;
        text-decoration: none !important;
    }
    .stealth-link {
        color: inherit !important;
        text-decoration: none !important;
    }
}

.f6-notification {
    position: fixed;
    top: calc(#{$navbar-height} + 0.5em);
    left: 50%;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    max-width: 50%;
    min-width: 250px;
    & > div {
        // do not hide delete button when there is overflow.
        max-height: 200px;
        overflow: auto;
    }

    z-index: 9999; // Ensure a high z-index value to place the element on top

}


.ml--1 {
    margin-left: -6px;
}

.margin-left-25 {
    margin-left: 25%;
}
.margin-left-50 {
    margin-left: 50%;
}
.margin-left-auto {
    margin-left: auto;
}

.is-fullvh-desktop {
    @include desktop {
        min-height: 100vh;
    }
}

figure {
    border-radius: 10px;
    img, iframe {
        border-radius: 10px;
    }
}
figcaption {
    //class "p-3 is-italic is-aligned-center"
    text-align: center;
    font-style: italic;
    padding: 0.75rem;
}

.shadow {
    -moz-box-shadow:    2px 2px 5px 5px lighten($primary, 5);
    -webkit-box-shadow: 2px 2px 5px 5px lighten($primary, 5);
    box-shadow:         2px 2px 5px 5px lighten($primary, 5);
}

.is-rounded-light {
    border-radius: 6px !important;
}

.is-absolute {
    position: absolute !important;
}

// END FIX BULMA

/*
 *
 * My style
 *
 */

#navbarTop {
    .navbar {
        //box-shadow: 0 1px 0 0 var(--background-evidence);
        height: $navbar-height;
    }

    // @deprecated ?
    //.navbar-item {
    //    .navbar-link:hover, .navbar-link.is-active {
    //        // @debug: There is an background overflow on hover, bulma padding things... :/
    //        background: none !important;
    //    }
    //}

    // Fix right navbar top on touch
    .navbar-touch-end {
        display: none;
        @include touch {
            display: flex;
            position: relative;
            margin-left: auto;
            height: $navbar-height;
            & > * {
                height: $navbar-height;
            }
        }
    }
    .navbar-burger {
        @include touch {
            margin-left: 0;
        }
    }

    .navbar-item {
        font-size: 0.9rem !important;
    }
    .navbar-item, .navbar-link {
        color: var(--white-ter);
        & > * {
            color: var(--white-ter);
        }
        &:hover, &.is-active, &:not(.notMe) *:hover {
            &:not(.notMe), & > i {
                color: var(--link2);
            }
        }
        @include mobile {
            & > .button {
                margin-left: -10px;
            }
        }
    }

    .navbar-brand a {
        padding-bottom: 0 !important;
    }

    .navbar-link:not(.is-arrowless) {
        &:after {
            font-size: 12px !important;
        }
    }

    .navbar-dropdown {
        border-bottom: solid 1px var(--grey-darker);
        border-left: solid 1px var(--grey-darker);
        border-right: solid 1px var(--grey-darker);
        .navbar-item:hover { // @bulma bad!
            background-color: var(--navbar-item-hover-background-color);
            cursor: pointer;
        }
        .navbar-divider {
            margin:0;
        }
    }
}

#footBar {
    z-index: 0;
    position: relative;
    //position: absolute;
    box-shadow: 0 0 1px 0 var(--is-highlight);
    margin-top: 3rem;
    padding: 2rem 1.5rem 2rem;

    opacity: 0;
    animation: fadeIn 0.5s;
    animation-delay: 0.5s;
    animation-fill-mode: forwards;

    .contacts {
        span {
            font-size: $size-small;
            a {
                padding-left: 1rem;
                color: var(--link2);
                &:hover {
                    text-decoration: underline;
                }
            }
        }
    }
}

#helperBar {
    background-color: var(--header-background-color) !important;
    margin-top: 0;
    padding-top: 2rem;

    .breadcrumb {
        font-size: 1.15rem;
        a {
            padding-right:0.4rem;
            padding-left:0.4rem;
        }
    }

    nav.level {
        .navbar-menu {
            background-color: inherit !important;
        }
    }

    nav.tabs {
        font-size: 0.9rem;
        ul {
            border-bottom-color: var(--border-color-light) !important;
        }
        li.is-active a {
            border-color: var(--border-color-light);
        }
    }

    @include touch {
        nav.tabs {
            padding-right: 0.75rem;
            padding-left: 0.75rem;
        }
    }

    .level-left {
        // level-right is hidden
        max-width: 100%;
        @include desktop {
            // prevent user roles overflow
            max-width: 75%;
        }
    }

    .tag.is-h:hover {
        background-color: var(--background-evidence);
    }
}

#mainPane {
    // Prevent NavbarTop overflow
    & > .columns:not(#overview) { // mt-3
        margin: 0.75rem 0 0 0;
    }
}

.top-section {
    margin: 3rem 0 0;
    padding: 0 10px 0;

    // Prevent NavbarTop overflow
    & > .columns, &.columns {
        margin-left: 0;
        margin-right: 0;
        & > .column {
            padding-left: 0;
            padding-right: 0;
        }
    }
}
/* ... */

